Feat: 数据服务模块集成dbSwitch

--- a/cgn-cloud-framework/pom.xml
+++ b/cgn-cloud-framework/pom.xml
@@ -91,5 +91,19 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk15to18</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.github.freakchick</groupId>
+			<artifactId>orange</artifactId>
+			<version>1.0</version>
+		</dependency>
     </dependencies>
 </project>
