Feat: 数据服务-api分组配置

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     image: cgn-cloud-gateway:latest
     restart: always
     volumes:
-      - /apps/cgn/cgn-cloud/logs:/logs
+      - /apps/cgn/cgn-cloud/logs:/app/logs
     environment:
       - TZ=Asia/Shanghai
     container_name: cgn-cloud-gateway
@@ -33,12 +33,26 @@ services:
     image: cgn-cloud-system:latest
     restart: always
     volumes:
-      - /apps/cgn/cgn-cloud/logs:/logs
+      - /apps/cgn/cgn-cloud/logs:/app/logs
     environment:
       - TZ=Asia/Shanghai
     container_name: cgn-cloud-system
     ports:
       - "18081:18081"
+    networks:
+      - cgn-net
+
+  # 系统服务
+  cgn-cloud-data-service:
+    image: cgn-cloud-data-service:latest
+    restart: always
+    volumes:
+      - /apps/cgn/cgn-cloud/logs:/app/logs
+    environment:
+      - TZ=Asia/Shanghai
+    container_name: cgn-cloud-data-service
+    ports:
+      - "18082:18082"
     networks:
       - cgn-net
 # 定义一个网络，让所有服务都在这个网络内，可以通过服务名互相访问
