Feat: 数据服务-接口配置删除无用字段

--- a/cgn-cloud-data-service/src/main/resources/application.yml
+++ b/cgn-cloud-data-service/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
         namespace: @nacos.namespace@
         username: ${spring.cloud.nacos.username}
         password: ${spring.cloud.nacos.password}
+#        register-enabled: false
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         namespace: ${spring.cloud.nacos.discovery.namespace}
