--- a/cgn-cloud-system/src/main/resources/application.yml
+++ b/cgn-cloud-system/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
         namespace: @nacos.namespace@
         username: ${spring.cloud.nacos.username}
         password: ${spring.cloud.nacos.password}
-#        register-enabled: false
+        ip: ${HOST_IP}
+      #        register-enabled: false
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         namespace: ${spring.cloud.nacos.discovery.namespace}
